streams part 3 added